Show combined total.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="phones-purchased-count two columns">0</div>
         <div class="phones-purchased-total two columns">$0.00</div>
         <div class="item-action three columns">
-          <button class="purchase-phone u-full-width  button-primary">Purchase Phone</button>
+          <button class="purchase-phone u-full-width button-primary">Purchase Phone</button>
         </div>
       </div>
       <div class="item row"> 
@@ -42,6 +42,11 @@
         <div class="item-action three columns">
           <button class="purchase-accessory u-full-width button-primary">Purchase Accessories</button>
         </div>
+      </div>
+      <div class="footer row">
+        <div class="seven columns text-right">Combined Total (with Tax)</div>
+        <div class="two columns combined-total">$0.00</div>
+        <div class="three columns">&nbsp;</div>
       </div>
     </div>
   </div>
